# agronext_lib

./: .gitignore  CHANGELOG.md  pyproject.toml  setup.py
.workflows/: integration.yml  publish-api.yml  publish.yml
.workflows/agro_pdf_generator/: publish.yml
.workflows/agronext_api/: integration.yml  publish.yml
.workflows/api/: publish.yml
.workflows/blob_sdk/: integration.yml  publish.yml
.workflows/gis_sdk/: integration.yml  publish.yml
.workflows/plug_sdk/: integration.yml  publish.yml
agro_gis_sdk/: pyproject.toml
agro_gis_sdk/src/agro_gis_sdk/: __init__.py  async_client.py  schemas.py  sdk.py
agro_gis_sdk/src/agro_gis_sdk/rates/: schemas.py
agro_gis_sdk/src/agro_gis_sdk/validations/: schemas.py
agro_pdf_generator/: pyproject.toml
agro_pdf_generator/src/agro_pdf_generator/: __init__.py  base_model.py  constants.py  generator.py  schemas.py  utils.py
agro_pdf_generator/src/agro_pdf_generator/blocks/: __init__.py  builders.py  renderer.py  schemas.py
agro_pdf_generator/src/agro_pdf_generator/builders/: proposal_block_builder.py  quotation_block_builder.py  simulation_block_builder.py
agro_pdf_generator/src/agro_pdf_generator/composers/data_schema/: acceptance.py  address.py  applicant.py  authorization.py  authorized.py  available_documents.py  beneficiaries.py  broker.py  coordinates.py  coverage.py  coverage_restrictions.py  declarations.py  excluded_risks.py  grace_period.py  header.py  land_property.py  lgpd.py  notifications.py  payment.py  political_exposure.py  prop_declaration.py  risk_data.py  risk_questionnaire.py  schema_composer.py  simulation.py  subsidy.py
agro_pdf_generator/src/agro_pdf_generator/composers/pdf_generator/: pdf_composer.py
agro_pdf_generator/src/agro_pdf_generator/config/: __init__.py  styles.py
agro_pdf_generator/src/agro_pdf_generator/layout/: __init__.py  schemas.py  templates.py
agronext_api/: README.md  __init__.py  asgi.py  bump_version.py  pyproject.toml
agronext_api/agronext_api/: __init__.py
agronext_api/agronext_api/apps/auth/: __init__.py  auth.py  auth_settings.py  profiles.py  user.py
agronext_api/agronext_api/apps/health_check/: exceptions.py  router.py  schemas.py
agronext_api/agronext_api/config/: base_settings.py  settings.py
agronext_api/agronext_api/database/: __init__.py  settings.py
agronext_api/agronext_api/exceptions/: __init__.py  auth.py  base.py  http.py
agronext_api/agronext_api/extensions/: __init__.py  pagination.py
agronext_api/agronext_api/logger/: formatters.py  settings.py
agronext_api/agronext_api/middlewares/: __init__.py  profiling.py  security.py  settings.py
agronext_api/agronext_api/schemas/: base_model.py
agronext_api/agronext_api/security/: __init__.py
agronext_api/agronext_api/security/access_control/: rbac.py  settings.py
agronext_api/agronext_api/services/: base_serivce.py
agronext_api/agronext_api/utils/: async_client.py
agronext_api/config/: settings.py
agronext_api/database/: __init__.py  settings.py
agronext_api/exceptions/: __init__.py  auth.py  database.py  http.py
agronext_api/extensions/: pagination.py
agronext_api/integrations/: __init__.py
agronext_api/logger/: __init__.py  formatters.py
agronext_api/middlewares/: profiling.py  settings.py
agronext_api/security/access_control/: abac.py  rbac.py
agronext_api/services/: base_serivce.py
agronext_api/src/agronext_api/: __init__.py  agronext_api.py
agronext_api/src/agronext_api/apps/health_check/: exceptions.py  router.py
agronext_api/src/agronext_api/config/: base_settings.py  settings.py
agronext_api/src/agronext_api/exceptions/: __init__.py  base.py  http.py
agronext_api/src/agronext_api/extensions/: __init__.py  pagination.py
agronext_api/src/agronext_api/integrations/: __init__.py
agronext_api/src/agronext_api/logger/: __init__.py  filters.py  formatters.py
agronext_api/src/agronext_api/middlewares/: __init__.py  profiling.py  security.py  settings.py
agronext_api/src/agronext_api/schemas/: base_model.py
agronext_api/src/agronext_api/security/: __init__.py
agronext_api/src/agronext_api/security/access_control/: settings.py
agronext_api/src/agronext_api/utils/: async_client.py
agronext_api/tests/agronext_api_test/apps/auth_test/: test_auth.py
async_client/: pyproject.toml
async_client/src/async_client/: __init__.py
blob_storage_sdk/: entrypoint.py  pyproject.toml
blob_storage_sdk/src/blob_storage_sdk/: __init__.py  azure_blob_client.py  dependencies.py  entrypoint.py  schemas.py  sdk.py
blob_storage_sdk/src/blob_storage_sdk/application/: dtos.py
blob_storage_sdk/src/blob_storage_sdk/application/interfaces/: __init__.py  blob_repository.py
blob_storage_sdk/src/blob_storage_sdk/application/services/: __init__.py  delete_file_service.py  download_file_service.py  get_file_service.py  list_files_service.py  save_file_service.py  update_file_service.py
blob_storage_sdk/src/blob_storage_sdk/infrastructure/: __init__.py  azure_blob_repository.py
blob_storage_sdk/tests/: test_azure_blob_client.py  test_blob_storage_sdk.py
gis_sdk/: pyproject.toml
gis_sdk/src/gis_sdk/: schemas.py  sdk.py
plug_sdk/: CHANGELOG.md  client.py  eas.rest  fetch.py  pyproject.toml  server.py  test.rest  transmit_quotation_request_data.json
plug_sdk/src/plug_sdk/: __init__.py  async_client.py  base_model.py  sdk.py
plug_sdk/src/plug_sdk/external_users/: __init__.py  schemas.py
plug_sdk/src/plug_sdk/financial/: __init__.py  schemas.py
plug_sdk/src/plug_sdk/gis/: schemas.py
plug_sdk/src/plug_sdk/legal_entity/: schemas.py
plug_sdk/src/plug_sdk/legal_identity/: __init__.py  schemas.py
plug_sdk/src/plug_sdk/notifications/: __init__.py  schemas.py
plug_sdk/src/plug_sdk/policy/: __init__.py  schemas.py  transmission_schemas.py
plug_sdk/src/plug_sdk/quotation_transmission/: __init__.py  schemas.py
plug_sdk/src/plug_sdk/scap/: __init__.py  domain_types.py  schemas.py
plug_sdk/src/plug_sdk/validations/: __init__.py  schemas.py
plug_sdk/tests/: test_plug_sdk.py  test_plug_sdk_integration.py
requirements/: requirements.txt
(+4 files in other folders)
