[project]
name = "agronext-api"
version = "0.0.9"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Cristovam Silva", email = "cristovam.silva@icloud.com" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi-pagination>=0.13.1",
    "fastapi[standard]>=0.115.12",
    "pydantic-settings>=2.9.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
[[tool.uv.index]]
name = "artifactory"
default = true
allow-insecure = true
url = "http://artifactory.eu.scor.local/artifactory/api/pypi/pypi/simple"
publish-url = "http://artifactory.eu.scor.local/artifactory/api/pypi/pypi"
