[project]
name = "agronext-api"
version = "0.0.15"
description = "Opinionated FastAPI setup for Agronext services."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi-pagination>=0.13.1",
    "fastapi[standard]>=0.123.9",
    "pydantic-settings>=2.9.1",
    "python-json-logger>=4.0.0",
]
[[project.authors]]
name = "Cristovam Lage da Silva"
email = "cristovam.lage@essor.com.br"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]

[[tool.uv.index]]
name = "artifactory"
default = true
allow-insecure = true
url = "https://artifactory.azure.scor.com/artifactory/api/pypi/pypi/simple"
publish-url = "https://artifactory.azure.scor.com/artifactory/api/pypi/pypi/"
