[project]
name = "async-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Cristovam Silva", email = "cristovam.silva@icloud.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
