[project]
name = "blob-storage-sdk"
version = "0.0.3"
description = "Python SDK for Blob Storage API"
readme = "README.md"
authors = [{ name = "Alexander Alves", email = "alexander.alves@essor.com.br" }]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "azure-storage-blob>=12.27.1",
    "pydantic>=2.11.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["fastapi>=0.116.1", "httpx>=0.28.1", "uvicorn>=0.35.0"]

[tool.uv]

[[tool.uv.index]]
name = "artifactory"
default = true
allow-insecure = true
url = "https://artifactory.azure.scor.com/artifactory/api/pypi/pypi/simple"
publish-url = "https://artifactory.azure.scor.com/artifactory/api/pypi/pypi/"
