[project]
name = "plug-sdk"
version = "0.0.20"
description = "Python SDK for Plug API"
readme = "README.md"
authors = [{ name = "Cristovam Silva", email = "cristovam.lage@essor.com.br" }]
requires-python = ">=3.12"
dependencies = ["httpx>=0.28.1", "pydantic[email]>=2.11.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pydantic-settings>=2.12.0",
]

[tool.uv]

[[tool.uv.index]]
name = "artifactory"
default = true
allow-insecure = true
url = "https://artifactory.azure.scor.com/artifactory/api/pypi/pypi/simple"
publish-url = "https://artifactory.azure.scor.com/artifactory/api/pypi/pypi/"
